--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -706,7 +706,9 @@ SET_PROPERTY(TARGET assimp PROPERTY DEBUG_POSTFIX ${ASSIMP_DEBUG_POSTFIX})
 TARGET_LINK_LIBRARIES(assimp ${ZLIB_LIBRARIES})
 
 IF (ASSIMP_BUILD_NONFREE_C4D_IMPORTER)
-	TARGET_LINK_LIBRARIES(assimp ${C4D_LIBRARIES})
+	TARGET_LINK_LIBRARIES(assimp optimized ${C4D_RELEASE_LIBRARY})
+	TARGET_LINK_LIBRARIES(assimp debug ${C4D_DEBUG_LIBRARY})
+	TARGET_LINK_LIBRARIES(assimp ${C4D_EXTRA_LIBRARIES})
 ENDIF (ASSIMP_BUILD_NONFREE_C4D_IMPORTER)
 
 SET_TARGET_PROPERTIES( assimp PROPERTIES
