C4D: enable 64 bit build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,21 +163,27 @@ IF (ASSIMP_BUILD_NONFREE_C4D_IMPORTER)
 		
 		# pick the correct prebuilt library
 		IF(MSVC11)
-			SET(C4D_LIB_POSTFIX "2012md")
+			SET(C4D_LIB_POSTFIX "_2012md")
 		ELSEIF(MSVC10)
-			SET(C4D_LIB_POSTFIX "2010md")
+			SET(C4D_LIB_POSTFIX "_2010md")
 		ELSEIF(MSVC90)
-			SET(C4D_LIB_POSTFIX "2008md")
+			SET(C4D_LIB_POSTFIX "_2008md")
 		ELSE()
 			MESSAGE( FATAL_ERROR 
 				"C4D is currently only supported with MSVC 9, 10, 11"
 			)
 		ENDIF()
 		
+		IF(CMAKE_CL_64)
+			SET(C4D_LIB_ARCH_POSTFIX "_x64")
+		ELSE()
+			SET(C4D_LIB_ARCH_POSTFIX "")
+		ENDIF()
+		
 		SET(C4D_LIB_BASE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Melange/_melange/lib/WIN")
 		
-		SET(C4D_DEBUG_LIBRARY "${C4D_LIB_BASE_PATH}/debug/_melange_lib_${C4D_LIB_POSTFIX}.lib")
-		SET(C4D_RELEASE_LIBRARY "${C4D_LIB_BASE_PATH}/release/_melange_lib_${C4D_LIB_POSTFIX}.lib")
+		SET(C4D_DEBUG_LIBRARY "${C4D_LIB_BASE_PATH}/debug/_melange_lib${C4D_LIB_ARCH_POSTFIX}${C4D_LIB_POSTFIX}.lib")
+		SET(C4D_RELEASE_LIBRARY "${C4D_LIB_BASE_PATH}/release/_melange_lib${C4D_LIB_ARCH_POSTFIX}${C4D_LIB_POSTFIX}.lib")
 		
 		# winsock and winmm are necessary dependencies of melange (this is undocumented, but true.)
 		SET(C4D_EXTRA_LIBRARIES WSock32.lib Winmm.lib)
